Update Ciberseguridad section styling and functionality

--- a/src/partials/ciber/slide_1.html
+++ b/src/partials/ciber/slide_1.html
@@ -4,15 +4,17 @@
       <div class="slide_int_content">
         <div class="compo">
           <div
-            class="flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-20 md:px-0 md:py-0 auto-rows-auto"
+            class="w-fullflex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:px-0 md:py-0 auto-rows-auto"
           >
-            <img
-              class="max-w-sm z-10 col-start-3 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto md:max-w-[400px]"
-              src="/assets/images/img_slide_1_ciber.png"
-              alt=""
-            />
+            <div class="col-start-3 col-span-4 row-start-1 row-span-4">
+              <img
+                class="mt-8 max-w-sm z-10 self-center w-full mx-auto md:max-w-[400px]"
+                src="/assets/images/img_slide_1_ciber.png"
+                alt=""
+              />
+            </div>
             <h4
-              class="-mt-10 z-20 text-3xl md:text-5xl text-white font-je col-start-1 col-span-4 row-start-1 row-span-3 self-end md:mt-10 md:ml-20"
+              class="-mt-10 z-20 text-3xl md:text-5xl text-white font-je col-start-1 col-span-4 row-start-1 row-span-3 self-end md:mt-0 md:ml-20"
             >
               <span class="inline-block rounded-full bg-azul-dark px-3 py-1"
                 >Tips</span
