--- a/src/partials/ciber/slide_2.html
+++ b/src/partials/ciber/slide_2.html
@@ -7,15 +7,17 @@
       <div class="slide_int_content">
         <div class="compo">
           <div
-            class="flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-20 md:px-0 md:py-0 auto-rows-auto"
+            class="w-full flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:px-0 md:py-0 auto-rows-auto"
           >
-            <img
-              class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_2_ciber.png"
-              alt=""
-            />
+            <div class="z-0 col-start-3 col-span-4 row-start-1 row-span-4">
+              <img
+                class="max-w-md w-full md:ml-12"
+                src="/assets/images/img_slide_2_ciber.png"
+                alt=""
+              />
+            </div>
             <h4
-              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-20"
+              class="-mt-10 z-20 text-3xl md:text-[2.5rem] text-azul-norm font-je font-semibold col-start-2 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:-ml-12 leading-none"
             >
               Para ingresar a<br class="md:block hidden" />
               la página web de<br class="md:block hidden" />
@@ -24,7 +26,7 @@
               <span class="block text-azul-60">www.asulado.com.</span>
             </h4>
             <p
-              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-4 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
+              class="md:-mt-3 col-start-3 col-span-3 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-32 md:mr-32 px-8 py-5 bg-amarillo-light rounded-lg z-10"
             >
               Evita hacerlo por medio de links o enlaces enviados que no sean
               oficiales de ASULADO.
