--- a/src/partials/ciber/slide_5.html
+++ b/src/partials/ciber/slide_5.html
@@ -4,42 +4,67 @@
       <div class="slide_int_content">
         <div class="compo">
           <div
-            class="flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-20 md:px-0 md:py-0 auto-rows-auto"
+            class="w-full flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:pl-12 md:pr-0 md:py-0 auto-rows-auto"
           >
-            <img
-              class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_5_ciber.png"
-              alt=""
-            />
-            <h4
-              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-8"
+            <div
+              class="col-start-3 col-span-4 row-start-1 row-span-4 self-center"
             >
-            No compartas <br class="md:block hidden" />
-            <span class="text-white">información personal,</span><br class="md:block hidden" />
-            como tu número de<br class="md:block hidden" />
-            celular o documento<br class="md:block hidden" />
-            de identidad, en tus<br class="md:block hidden" />
-            redes sociales.
+              <img
+                class="max-w-sm z-0 w-full md:ml-20"
+                src="/assets/images/img_slide_5_ciber.png"
+                alt=""
+              />
+            </div>
+            <h4
+              class="-mt-10 z-20 text-2xl md:text-[2.5rem] text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-8 leading-none"
+            >
+              No compartas <br class="md:block hidden" />
+              <span class="text-white">información personal,</span
+              ><br class="md:block hidden" />
+              como tu número de<br class="md:block hidden" />
+              celular o documento<br class="md:block hidden" />
+              de identidad, en tus<br class="md:block hidden" />
+              redes sociales.
             </h4>
             <p
-              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-0 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
+              class="md:-mt-12 col-start-3 col-span-3 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-0 md:mr-48 px-8 py-5 bg-amarillo-light rounded-lg z-10"
             >
-            Así evitarás exponerte al robo de tu información, suplantación de identidad o venta de datos personales.
+              Así evitarás exponerte al robo de tu información, suplantación de
+              identidad o venta de datos personales.
             </p>
           </div>
         </div>
       </div>
       <div class="slide_int_bg">
-        <svg viewBox="0 0 2008 830" fill="none" xmlns="http://www.w3.org/2000/svg">
-         
-          <path d="M109.051 317.141H91.9414V334.251H109.051V317.141Z" stroke="#F1F8FD" stroke-miterlimit="10"/>
-          <path d="M1333.61 37.51L1331.53 37.53C1331.43 27.76 1323.4 19.9 1313.63 20L1313.61 17.92C1323.38 17.82 1331.24 9.79 1331.14 0.02L1333.22 0C1333.32 9.77 1341.35 17.63 1351.12 17.53L1351.14 19.61C1341.37 19.71 1333.51 27.74 1333.61 37.51ZM1319.96 18.9C1325.8 20.81 1330.47 25.38 1332.5 31.18C1334.41 25.34 1338.98 20.67 1344.78 18.64C1338.94 16.73 1334.27 12.16 1332.24 6.35C1330.32 12.19 1325.76 16.86 1319.95 18.89L1319.96 18.9Z" fill="#F6DF6B"/>
-          <path d="M215.609 559.51L213.529 559.53C213.429 549.76 205.399 541.9 195.629 542L195.609 539.92C205.379 539.82 213.239 531.79 213.139 522.02L215.219 522C215.319 531.77 223.349 539.63 233.119 539.53L233.139 541.61C223.369 541.71 215.509 549.74 215.609 559.51ZM201.959 540.9C207.799 542.81 212.469 547.38 214.499 553.18C216.409 547.34 220.979 542.67 226.779 540.64C220.939 538.73 216.269 534.16 214.239 528.35C212.319 534.19 207.759 538.86 201.949 540.89L201.959 540.9Z" fill="#F6DF6B"/>
-          <path d="M1465.33 483.661H1266.71C1266.71 483.661 1300.36 389.721 1392.89 455.621C1392.89 455.621 1459.91 410.451 1465.33 483.661Z" stroke="white" stroke-miterlimit="10"/>
-          <path d="M199.331 104.661H0.710938C0.710938 104.661 34.3609 10.7209 126.891 76.6109C126.891 76.6109 193.911 31.4409 199.331 104.651V104.661Z" stroke="white" stroke-miterlimit="10"/>
-        
-          </svg>
-          
+        <svg
+          viewBox="0 0 2008 830"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M109.051 317.141H91.9414V334.251H109.051V317.141Z"
+            stroke="#F1F8FD"
+            stroke-miterlimit="10"
+          />
+          <path
+            d="M1333.61 37.51L1331.53 37.53C1331.43 27.76 1323.4 19.9 1313.63 20L1313.61 17.92C1323.38 17.82 1331.24 9.79 1331.14 0.02L1333.22 0C1333.32 9.77 1341.35 17.63 1351.12 17.53L1351.14 19.61C1341.37 19.71 1333.51 27.74 1333.61 37.51ZM1319.96 18.9C1325.8 20.81 1330.47 25.38 1332.5 31.18C1334.41 25.34 1338.98 20.67 1344.78 18.64C1338.94 16.73 1334.27 12.16 1332.24 6.35C1330.32 12.19 1325.76 16.86 1319.95 18.89L1319.96 18.9Z"
+            fill="#F6DF6B"
+          />
+          <path
+            d="M215.609 559.51L213.529 559.53C213.429 549.76 205.399 541.9 195.629 542L195.609 539.92C205.379 539.82 213.239 531.79 213.139 522.02L215.219 522C215.319 531.77 223.349 539.63 233.119 539.53L233.139 541.61C223.369 541.71 215.509 549.74 215.609 559.51ZM201.959 540.9C207.799 542.81 212.469 547.38 214.499 553.18C216.409 547.34 220.979 542.67 226.779 540.64C220.939 538.73 216.269 534.16 214.239 528.35C212.319 534.19 207.759 538.86 201.949 540.89L201.959 540.9Z"
+            fill="#F6DF6B"
+          />
+          <path
+            d="M1465.33 483.661H1266.71C1266.71 483.661 1300.36 389.721 1392.89 455.621C1392.89 455.621 1459.91 410.451 1465.33 483.661Z"
+            stroke="white"
+            stroke-miterlimit="10"
+          />
+          <path
+            d="M199.331 104.661H0.710938C0.710938 104.661 34.3609 10.7209 126.891 76.6109C126.891 76.6109 193.911 31.4409 199.331 104.651V104.661Z"
+            stroke="white"
+            stroke-miterlimit="10"
+          />
+        </svg>
       </div>
     </div>
   </div>
