--- a/src/partials/ciber/slide_6.html
+++ b/src/partials/ciber/slide_6.html
@@ -7,25 +7,31 @@
       <div class="slide_int_content">
         <div class="compo">
           <div
-            class="flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-20 md:px-0 md:py-0 auto-rows-auto"
+            class="w-full flex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:pl-12 md:pr-0 md:py-0 auto-rows-auto"
           >
-            <img
-              class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_6_ciber.png"
-              alt=""
-            />
-            <h4
-              class="-mt-10 z-20 text-3xl md:text-3xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-10"
+            <div
+              class="col-start-3 col-span-4 row-start-1 row-span-4 self-center"
             >
-            <span class="inline-block rounded-full bg-amarillo-light px-3 py-1 font-thin text-2xl ml-[-40px]">Ten en cuenta:</span><br class="md:block hidden" />
-            ASULADO<br class="md:block hidden" />
-            nunca te solicitará<br class="md:block hidden" />
-            por correo electrónico<br class="md:block hidden" />
-            información confidencial<br class="md:block hidden" />
-            o financiera, como claves<br class="md:block hidden" />
-            o códigos de seguridad.
+              <img
+                class="max-w-md z-0 w-full mx-auto md:-mt-6"
+                src="/assets/images/img_slide_6_ciber.png"
+                alt=""
+              />
+            </div>
+            <h4
+              class="-mt-10 z-20 text-2xl md:text-[2.5rem] text-azul-norm font-je font-semibold col-start-1 col-span-4 row-start-1 row-span-4 self-center md:mt-0 md:ml-10 leading-none"
+            >
+              <span
+                class="inline-block rounded-full bg-amarillo-light px-3 py-1 font-light text-lg -ml-10"
+                >Ten en cuenta:</span
+              ><br class="md:block hidden" />
+              ASULADO<br class="md:block hidden" />
+              nunca te solicitará<br class="md:block hidden" />
+              por correo electrónico<br class="md:block hidden" />
+              información confidencial<br class="md:block hidden" />
+              o financiera, como claves<br class="md:block hidden" />
+              o códigos de seguridad.
             </h4>
-           
           </div>
         </div>
       </div>
