--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -56,24 +56,21 @@
             ></i>
             <div class="ciber-int-top">
               <div>
-                <img src="/assets/images/img-ciber-t1.png" alt="" />
+                <img src="/assets/images/img-ciber-t2.png" alt="" />
               </div>
-              <h3>Para el chat en nuestra <span>página web</span> (LUSA):</h3>
+              <h3>Para nuestro canal de <span>WhatsApp:</span> </h3>
             </div>
             <ul>
               <li>
-                Ingresa al chat con Lusa únicamente a través del sitio web
-                oficial de ASULADO (www.asulado.com).
+                Asegúrate de que el número de contacto sea el mismo que encuentras en nuestro sitio web oficial.
               </li>
               <li>
-                Evita compartir información que pueda comprometer la seguridad
-                de tus datos e información, como contraseñas, claves o datos
-                bancarios.
+                Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo desde las tiendas de aplicaciones oficiales (Play Store y App Store).
               </li>
               <li>
-                No accedas a enlaces sin estar 100% seguro de que son confiables
-                y provengan de fuentes oficiales.
+                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
               </li>
+              <li>No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.</li>
             </ul>
           </div>
         </div>
@@ -89,23 +86,16 @@
             ></i>
             <div class="ciber-int-top">
               <div>
-                <img src="/assets/images/img-ciber-t1.png" alt="" />
+                <img src="/assets/images/img-ciber-t3.png" alt="" />
               </div>
-              <h3>Para el chat en nuestra <span>página web</span> (LUSA):</h3>
+              <h3>Para nuestro <span>portal de contenidos:</span></h3>
             </div>
             <ul>
               <li>
-                Ingresa al chat con Lusa únicamente a través del sitio web
-                oficial de ASULADO (www.asulado.com).
+                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
               </li>
               <li>
-                Evita compartir información que pueda comprometer la seguridad
-                de tus datos e información, como contraseñas, claves o datos
-                bancarios.
-              </li>
-              <li>
-                No accedas a enlaces sin estar 100% seguro de que son confiables
-                y provengan de fuentes oficiales.
+                No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.
               </li>
             </ul>
           </div>
@@ -118,23 +108,19 @@
             ></i>
             <div class="ciber-int-top">
               <div>
-                <img src="/assets/images/img-ciber-t1.png" alt="" />
+                <img src="/assets/images/img-ciber-t4.png" alt="" />
               </div>
-              <h3>Para el chat en nuestra <span>página web</span> (LUSA):</h3>
+              <h3>Para nuestro <span>portal transaccional:</span></h3>
             </div>
             <ul>
               <li>
-                Ingresa al chat con Lusa únicamente a través del sitio web
-                oficial de ASULADO (www.asulado.com).
+                Asegúrate de que tu contraseña sea segura: que tenga mínimo 8 caracteres y combine letras mayúsculas y minúsculas, números y caracteres especiales.
               </li>
               <li>
-                Evita compartir información que pueda comprometer la seguridad
-                de tus datos e información, como contraseñas, claves o datos
-                bancarios.
+                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
               </li>
               <li>
-                No accedas a enlaces sin estar 100% seguro de que son confiables
-                y provengan de fuentes oficiales.
+                No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.
               </li>
             </ul>
           </div>
