--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -288,6 +288,12 @@
             Educacion financiera
           </a>
         </li>
+        <li>
+          <a href="/ciberseguridad" class="dest" aria-current="page">
+            Ciberseguridad
+          </a>
+        </li>
+        
       </ul>
     </div>
     <div class="as__footer_brands">
