--- a/src/partials/gobierno/tabs.html
+++ b/src/partials/gobierno/tabs.html
@@ -10,6 +10,7 @@
             <option value="2">Órganos de gobierno</option>
             <option value="3">Informes</option>
             <option value="4">Alta gerencia</option>
+            <option value="5">Información para accionistas</option>
           </select>
         </div>
         <ul class="as__doc_tabs">
@@ -84,6 +85,19 @@
             >
               <i class="fa-solid fa-file-lines"></i>
               <b>Informes</b>
+            </a>
+          </li>
+          <li class="w-full">
+            <a
+              href="#documentos"
+              data-tab="5"
+              data-hash="informacion_accionistas"
+              aria-current="page"
+              class="tabs_link"
+            >
+              <i class="fa-solid fa-file-user"></i>
+             
+              <b>Información para accionistas</b>
             </a>
           </li>
         </ul>
