--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -32,7 +32,7 @@
           <p>Conoce las condiciones generales de las Rentas Vitalicias
             contratadas</p>
           <div class="flex flex-col md:flex-row gap-4 w-full">
-            <div>
+            <div class="border-solid">
               <p class="prop_anim">
                 <b>Hasta</b> el 17 de abril de 2024</b>
               </p>
