--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -32,7 +32,7 @@
           <p>Conoce las condiciones generales de las Rentas Vitalicias
             contratadas</p>
           <div class="flex flex-col md:flex-row gap-4 w-full">
-            <div class="border-solid">
+            <div class="pr-4 border-r">
               <p class="prop_anim">
                 <b>Hasta</b> el 17 de abril de 2024</b>
               </p>
@@ -45,7 +45,7 @@
                 <i role="presentation" class="fa-light fa-arrow-right"></i>
               </a>
             </div>
-            <div>
+            <div class="pl-2">
               <p class="prop_anim">
                 <b
                   >A partir</b> del 17 de abril de 2024
