--- a/src/partials/PORTAL/p_footer.html
+++ b/src/partials/PORTAL/p_footer.html
@@ -244,5 +244,52 @@
     </div>
   </div>
   <!-- <label class="modal-backdrop" for="modal_data">Cerrar</label> -->
+
+  <!-- MODAL TIME -->
+</div>
+<dialog
+  id="timer_session"
+  class="modal modal-bottom sm:modal-middle modal_sesion"
+>
+  <div class="modal-box">
+    <div class="modal_info">
+      <i class="ico-warn fa-duotone fa-triangle-exclamation"></i>
+      <h3>Hemos cerrado tu sesión</h3>
+      <p class="py-4">
+        Llevas 10 minutos de inactividad. Por seguridad, hemos cerrado tu sesión
+        automáticamente.
+      </p>
+    </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <p>Haz clic en “aceptar” para iniciar sesión de nuevo.</p>
+        <button id="close_timer_session" class="as__button small">
+          <span>Aceptar</span>
+          <i role="presentation" class="fa-light fa-arrow-right"></i>
+        </button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
+<!-- MODAL TOAST -->
+<div id="toast_session" class="hidden toast toast-end toast_sesion">
+  <div role="alert" class="alert">
+    <i class="ico-warn fa-duotone fa-triangle-exclamation"></i>
+    <div class="alert-int">
+      <h4>¿Sigues ahí?</h4>
+      <p class="s_info">
+        ¡Llevas 5 minutos de inactividad! Por temas de seguridad, en los
+        próximos 5 minutos tu sesión se cerrará si no realizas ninguna
+        actividad.
+      </p>
+      <div class="alert-action">
+        <p class="s_info2">
+          Haz clic en acepatr para mostrarnos que sigues ahí.
+        </p>
+        <button id="close_toast_session">Aceptar</button>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- MODAL -->
