--- a/src/partials/PORTAL/p_footer.html
+++ b/src/partials/PORTAL/p_footer.html
@@ -285,7 +285,7 @@
       </p>
       <div class="alert-action">
         <p class="s_info2">
-          Haz clic en aceptar para mostrarnos que sigues ahí.
+          Haz clic en "aceptar" para mostrarnos que sigues ahí.
         </p>
         <button id="close_toast_session">Aceptar</button>
       </div>
