--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2786,3 +2786,37 @@ body {
     }
   }
 }
+
+.pa_login {
+  @apply w-screen flex md:flex-row flex-col bg-gradient-to-b from-alpha-18 to-[#EEF7FB];
+
+  &.pa_mant {
+    .pa_login_screen {
+      @apply md:min-h-[50vh] md:w-full bg-p-login2 flex flex-col gap-8 items-center;
+      .error {
+        @apply max-w-lg my-24 flex flex-col gap-4 justify-center mx-auto w-full text-center;
+        h4 {
+          @apply text-azul-bold text-2xl font-je mb-4;
+          a {
+            @apply btn-link text-azul-bold text-2xl font-je mb-4;
+          }
+        }
+        h3 {
+          @apply text-azul-dark text-3xl font-je mb-4;
+        }
+        p {
+          @apply text-azul-dark text-lg leading-tight;
+          &.text-try {
+            @apply text-2xl;
+          }
+        }
+        img {
+          @apply w-full max-w-xl mx-auto my-4;
+        }
+        .logo {
+          @apply !w-[220px] mx-auto;
+        }
+      }
+    }
+  }
+}
