Update styling and fix typos in error pages

--- a/src/layouts/portal.html
+++ b/src/layouts/portal.html
@@ -97,7 +97,10 @@
       type="text/javascript"
       src="https://service.force.com/embeddedservice/5.0/esw.min.js"
     ></script>
-
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.2.0/intro.min.js"
+    ></script>
     <script src="/assets/js/portal.js"></script>
     <!-- CHAT  -->
 
