Update form layout and include new HTML file for form in 4_novedades_1_4.html

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -250,6 +250,18 @@
       @apply text-xl animate-pulse;
     }
   }
+  .caja {
+    @apply flex flex-row flex-wrap w-full;
+    .pbBody {
+      @apply w-full flex-auto;
+    }
+    .pbBottomButtons {
+      @apply md:w-1/4 px-2;
+      input{
+        @apply w-full;
+      }
+    }
+  }
 }
 .formpp {
   .pbBottomButtons {
